# Cortex-Agent-Framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cortex.yaml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
cortex/: __init__.py  exceptions.py  framework.py  identity.py  providers.py
cortex/ants/: __init__.py  ant_colony.py  ant_server.py
cortex/cli/: __init__.py  ants.py  delta.py  dev_mode.py  dry_run.py  main.py  migrate.py  publish.py  replay.py  setup_wizard.py  spec.py  ui.py
cortex/config/: __init__.py  auto_discovery_schema.py  loader.py  schema.py  validator.py
cortex/llm/: __init__.py  client.py  context.py
cortex/llm/providers/: __init__.py  anthropic_provider.py  azure_provider.py  bedrock_provider.py  compatible_provider.py  custom_provider.py  deepseek_provider.py  gemini_provider.py  grok_provider.py  local_provider.py  mistral_provider.py  (+2 more)
cortex/modules/: __init__.py  blueprint_store.py  capability_scout.py  external_mcp_registry.py  generic_mcp_agent.py  history_store.py  intent_gate.py  learning_engine.py  observability_emitter.py  primary_agent.py  result_envelope_store.py  session_manager.py  signal_registry.py  task_complexity_scorer.py  task_graph_compiler.py  tool_server_registry.py  validation_agent.py
cortex/sandbox/: __init__.py  code_sandbox.py  code_store.py  result_validator.py
cortex/security/: __init__.py  bash_sandbox.py  mcp_output_guard.py  sanitiser.py  scrubber.py
cortex/storage/: __init__.py  base.py  memory_backend.py  redis_backend.py  sqlite_backend.py
cortex/streaming/: __init__.py  sse.py  status_events.py
cortex/testing/: __init__.py  framework.py  handler_runner.py  mock_server.py
cortex/ui/: __init__.py  server.py
cortex/wizard/: __init__.py  server.py
docs/: ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DEPLOYMENT.md  FAQ.md  FEATURES.md  GETTING_STARTED.md  OVERVIEW.md  USE_CASES.md
tests/: __init__.py  test_capability_scout_discovery.py  test_e2e_scenarios.py  test_external_mcp_registry.py  test_external_write_filter.py  test_generic_mcp_agent.py  test_history_store.py  test_integration.py  test_learning_engine.py  test_llm_client.py  test_mcp_output_guard.py  test_openai_providers.py  test_part1_wave_gate_and_hitl.py  test_part2_judge_hitl_unified_scout.py  test_primary_agent.py  test_result_envelope_store.py  test_security.py  test_session_manager.py  test_signal_registry.py  test_storage_backends.py  test_task_graph.py  test_tool_server_registry.py  test_validation_agent.py
(+2 files in other folders)
